tests/ui/proc-macro/issue-89566-suggest-fix-invalid-top-level-macro-attr.stderr
error: `derive` attribute cannot be used at crate level
  --> $DIR/issue-89566-suggest-fix-invalid-top-level-macro-attr.rs:3:1
   |
LL | #![derive(Debug)]
   | ^^^^^^^^^^^^^^^^^
   |
help: perhaps you meant to use an outer attribute
   |
LL - #![derive(Debug)]
LL + #[derive(Debug)]
   |

error: aborting due to 1 previous error

